--- a/Documents/Bake Shop/Index.html
+++ b/Documents/Bake Shop/Index.html
@@ -1,43 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><body style="background-color:aquamarine;"></body>
+    <head>
         <title>Suzi's Bake Shop</title>
+        <link rel="stylesheet" href="stylesheets/style.css">
     </head>
     <header>
-        <style>
-            .topnav {
-    background-color: rgb(1, 61, 61);
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #036b6d;
-    color: black;
-  }
-  
-  /* Add an active class to highlight the current page */
-  .topnav a.active {
-    background-color: #036b6d;
-    color: black;
-  }
-  
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
-    display: none;
-  }  
-  </style>
         <nav>
             <ul>
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
@@ -54,43 +21,23 @@
             </div>
         </nav>
     </header>
-
-    <body ><body style="background-color:aquamarine;">
-    </p>
-     
+    <body>
+      <main>
+        <h1>Welcome to Suzi's Bakeshop!</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam vero qui esse necessitatibus doloribus repellat eligendi cupiditate aut neque iste veniam, deleniti molestiae aperiam ab omnis dolorem inventore dolores distinctio.</p>
+      </main>
+      <aside>
+        <div class="container">
+          <div class="ads">
+              <img class="ad" src="https://upload.wikimedia.org/wikipedia/commons/8/8f/Cucina_012.jpg" alt="Kitchen Knives advertisement"/>
+              <img class="ad" src="https://food.fnr.sndimg.com/content/dam/images/food/products/2021/1/26/rx_rachael-ray-create-delicious-nonstick-cookware-pots-and-pans-set-13-piece.jpeg.rend.hgtvcom.616.616.suffix/1611697745590.jpeg" alt="Pots advertisement"/>
+              <img class="ad" src="https://reviewed-com-res.cloudinary.com/image/fetch/s--ZankvZR0--/b_white,c_limit,cs_srgb,f_auto,fl_progressive.strip_profile,g_center,q_auto,w_1200/https://reviewed-production.s3.amazonaws.com/1666019725509/Bosch_HERO.png" alt="Kitchen Oven advertisement"/>
+          </div>
+          <p>advertisement</p>
+        </div>
+      </aside>
     </body>
-</main>
-<style>
-    body {
-      background: rgb(225, 227, 222);
-    }
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .container img {
-      width: 200px;
-      height: 200px;
-      padding: 3px;
-      margin-left: 3px;
-      border: solid 1px black; 
-    }
-  </style>
-</head>
-  
-<body>
-  <div class="container">
-      <body>
-    <div class="ads">
-        <img class="ad" src="https://upload.wikimedia.org/wikipedia/commons/8/8f/Cucina_012.jpg" alt="Kitchen Knives advertisement"/>
-        <img class="ad" src="https://food.fnr.sndimg.com/content/dam/images/food/products/2021/1/26/rx_rachael-ray-create-delicious-nonstick-cookware-pots-and-pans-set-13-piece.jpeg.rend.hgtvcom.616.616.suffix/1611697745590.jpeg" alt="Pots advertisement"/>
-        <img class="ad" src="https://reviewed-com-res.cloudinary.com/image/fetch/s--ZankvZR0--/b_white,c_limit,cs_srgb,f_auto,fl_progressive.strip_profile,g_center,q_auto,w_1200/https://reviewed-production.s3.amazonaws.com/1666019725509/Bosch_HERO.png" alt="Kitchen Oven advertisement"/>
-    </div>
-    <p>advertisement</p>
-</body>
     <footer>    
-    <p>Ted McDaniel || 2023</p>
-    </footer>
-        
+      <p>Ted McDaniel || 2023</p>
+    </footer>     
 </html>
